@@ -34,8 +34,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Random;
-import java.util.stream.Collectors;
+import java.util.random.RandomGenerator;
 import java.util.stream.Stream;
 
 import javax.xml.stream.XMLStreamException;
@@ -127,7 +126,7 @@ public class PersistentObject<T> {
 		final Reader<? extends T> reader
 	) {
 		VALUES.add(new PersistentObject<>(name, value, writer, reader));
-		RandomRegistry.random().setSeed(SEED);
+		RandomRegistry.random(new LCG64ShiftRandom(SEED));
 	}
 
 	private static void init() {
@@ -423,46 +422,46 @@ public class PersistentObject<T> {
 	public static List<Genotype<BitGene>> nextPopulationBitGene() {
 		return Stream.generate(PersistentObject::nextGenotypeBitGene)
 			.limit(7)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public static List<Genotype<CharacterGene>> nextPopulationCharacterGene() {
 		return Stream.generate(PersistentObject::nextGenotypeCharacterGene)
 			.limit(7)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public static List<Genotype<IntegerGene>> nextPopulationIntegerGene() {
 		return Stream.generate(PersistentObject::nextGenotypeIntegerGene)
 			.limit(7)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public static List<Genotype<LongGene>> nextPopulationLongGene() {
 		return Stream.generate(PersistentObject::nextGenotypeLongGene)
 			.limit(7)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public static List<Genotype<DoubleGene>> nextPopulationDoubleGene() {
 		return Stream.generate(PersistentObject::nextGenotypeDoubleGene)
 			.limit(7)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public static List<Genotype<EnumGene<Integer>>> nextPopulationEnumGene() {
 		return Stream.generate(PersistentObject::nextGenotypeEnumGeneInteger)
 			.limit(7)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 
-	private static Random random() {
+	private static RandomGenerator random() {
 		return RandomRegistry.random();
 	}
 
 	static {
-		final Random random = new LCG64ShiftRandom.ThreadSafe(SEED);
+		final var random = new LCG64ShiftRandom(SEED);
 		using(random, r -> init());
 	}
 
